[package]
name = "minilog"
version = "0.1.0"
edition = "2021"
authors = ["Bay"]
description = "Zero-dependency logging library."
repository = "https://github.com/zX3no/log"
readme = "README.md"
license = "CC0-1.0"

[dependencies]

[features]
strip = []

info = []  # Unused.
warn = []  # Allows warnings and errors.
error = [] # Only allows errors. 