[package]
name = "mini"
version = "0.1.0"
edition = "2021"
authors = ["Bay"]
description = "Zero-dependency logging and profiling library."
repository = "https://github.com/zX3no/mini"
readme = "README.md"
license = "CC0-1.0"

[dependencies]

[features]
profile = [] # Enable profiling.
info = []    # Show all logging.
warn = []    # Allows warnings and errors.
error = []   # Only allows errors.